# infra_project

./: .gitignore  Cargo.toml
infra/: Cargo.toml
infra/db/: .env  Cargo.toml
infra/db/migrations/: 00001_create_users_table.sql  00002_create_payments_table.sql  00003_create_installments_table.sql
infra/db/src/: lib.rs  main.rs
infra/db/src/models/: payment.rs  user.rs
infra/db/src/schema/: mod.rs
