[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
rust_decimal = { version = "1.30.0", features = ["serde-with-str"] }
rust_decimal_macros = "1.30.0"
